--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 /* padronização de cores */
-html{
+html {
 
     /* variáveis do css */
     --corPrimaria:#017143;
@@ -17,7 +17,7 @@ html{
     --corTerciaria: #fff;
 }
 
-/* container principal */
+/* Container principal */
 main{
     position: relative;
     width: 100%;
@@ -29,11 +29,11 @@ main{
     background-color: var(--corTerciaria);
 }
 
-/* header (cabeçalho) */
+/* Header (cabeçalho) */
 header{
-    position: absolute;
-    top: 0;
-    left: 0;
+    position:absolute;
+    top:0;
+    left:0;
     width: 100%;
     padding: 20px 100px;
     display: flex;
@@ -45,38 +45,35 @@ header .logo{
     position: relative;
     max-width: 80px;
 }
-
 header .logo:hover{
     filter: invert(0.1);
 }
-
 header ul li{
     list-style: none;
 }
-
 header ul{
     position: relative;
     display: flex;
 }
-
 header ul li a{
-    /* garante que o elemento seja renderizado em linha dentro do bloco */
+    /* garante que o elemento seja renderizado
+    em linha dentro do bloco */
     display: inline-block;
     color: var(--corSecundaria);
     font-size: 20px;
     font-weight: 400;
     margin-left: 40px;
-    text-decoration:  none;
+    text-decoration: none;
     padding: 5px;
 }
 /* hover dos links do cabeçalho */
 header ul li a:hover{
-    background-color: var(--corPrimaria);
+    background-color: var(--corPrimaria) ;
     color: var(--corTerciaria);
     border-radius: 7px;
 }
 
-/* conteudo principal */
+/* conteúdo principal */
 .conteudo{
     position: relative;
     width: 100%;
@@ -89,28 +86,26 @@ header ul li a:hover{
     /* limita o espaço do texto */
     max-width: 600px;
 }
-.conteudo .textoPrincipal h2{
+.conteudo .textoPrincipal h2 {
     color: var(--corSecundaria);
-    /* lem = 1vez o tamanho da fonte do elemento */
+    /* 1em = 1vez o tamanho da fonte do elemento */
     /* 16px*2.5= 40px */
     font-size: 2.5em;
     /* espaçamento vertical da fonte */
     line-height: 1.5em;
     font-weight: 500;
 }
-.conteudo .textoPrincipal h2 span{
+.conteudo .textoPrincipal h2 span {
     color: var(--corPrimaria);
     font-size: 1.2em;
     font-weight: 900;
 }
-
 .conteudo .textoPrincipal p{
     color: var(--corSecundaria);
 }
-
 .conteudo .textoPrincipal a{
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 20px; 
     padding: 8px 20px;
     background-color: var(--corPrimaria);
     color: var(--corTerciaria);
@@ -119,7 +114,6 @@ header ul li a:hover{
     font-weight: 500;
     letter-spacing: 1px;
 }
-
 .conteudo .textoPrincipal a:hover{
     background-color: var(--corSecundaria);
     color: var(--corTerciaria);
@@ -128,28 +122,26 @@ header ul li a:hover{
     text-decoration: none;
 }
 
-/* imagem do copo grande */
+/* imagem do copo grande 🍦 */
 .conteudo .imgBox{
     width: 600px;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding-right: 50px;
     margin-top: 50px;
 }
-
 .conteudo .imgBox img{
     max-width: 340px;
 }
 
-/* copos menores */
-.sorvetes{
+/* copos menores 🍦 */
+.sorvetes {
     position: absolute;
     left: 50%;
     bottom: 20px;
     transform: translateX(-50%);
     display: flex;
 }
-
 .sorvetes li{
     list-style: none;
     display: inline-block;
@@ -157,11 +149,9 @@ header ul li a:hover{
     cursor: pointer;
     transition: 0.5s;
 }
-
-.sorvetes li:hover{
+.sorvetes li:hover {
     transform: translateY(-15px);
 }
-
 .sorvetes li img{
     max-width: 60px;
 }
@@ -177,43 +167,40 @@ header ul li a:hover{
     justify-content: center;
     align-items: center;
 }
-
-.sociais li{
+.sociais li {
     list-style: none;
 }
-
 #threads{
     height: 40px;
 }
-
 .sociais li a{
-    display: inline-block;
+    display:inline-block;
     margin: 5px 0;
     /* altera a escala de tamanho */
     transform: scale(0.6);
-    /* iverter a cor para branco */
+    /* inverte a cor para branco */
     filter: invert(1);
 }
-
 .sociais li a:hover{
     color: var(--corSecundaria);
-    filter: invert(0)
+    filter: invert(0);
 }
 
+/* circulo */
 .circulo{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height:100%;
     background: var(--corPrimaria);
 
-    /* tamanho --> lado  --> posição */
+    /* tamanho --> lado --> posição */
     clip-path: circle(600px at right 800px);
 }
 
-/* Responsividade */
-@media (max-width:992px){
+/* ******Responsividade******** */
+@media (max-width: 992px){
     header{
         padding: 20px;
     }
@@ -221,7 +208,7 @@ header ul li a:hover{
         max-width: 60px;
     }
     header ul{
-        /* ocultar exibição da lista */
+        /* oculta a exibição da lista */
         display: none;
     }
 
@@ -238,9 +225,8 @@ header ul li a:hover{
         background-repeat: no-repeat;
         filter: invert(1);
         z-index: 11;
-    }
-
-    .toggle .active{
+    }    
+    .toggle.active{
         position: fixed;
         right: 20px;
         /* preenchido com a imagem de 'fechar' */
@@ -250,22 +236,54 @@ header ul li a:hover{
         background-repeat: no-repeat;
     }
 
-    /* formar a lista do menu hambúrguer */
-    header ul.links.active{
+    /* formar a lista do menu hamburguer */
+    header ul.links.active {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        height: 40%;
+        height: 45%;
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: #f2f2f2;
         z-index: 10;
     }
-
-header ul li a{
-    font-size: 1.5em;
-    margin: 5px 0;
-}
+    header ul li a {
+        font-size: 1.5em;
+        margin: 5px 0;
+    }
+    /* Conteúdo */
+    main {
+        padding: 20px 20px 120px;
+    }
+    .conteudo {
+        flex-direction: column; /* Joga o conteudo em coluna (Blocos) */
+        margin-top: 100px;
+    }
+    .conteudo .textoPrincipal h2 {
+        font-size: 2.5em;
+        margin-bottom: 15px;
+    }    
+    .conteudo .textoPrincipal {
+        max-width: 100%;
+    }    
+    .conteudo .imgBox {
+        max-width: 300px;
+    }    
+    .thumb li img {
+        max-width: 40px;
+    }
+    .circulo {
+        clip-path: circle(400px at center bottom);
+    }
+    .sociais {
+        /* Estiliza os sociais */
+        /* background: #017143; */
+        background: var(--corPrimaria);
+        right: 0;
+        width: 50px;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+    }
 }
